assets/scss/page/index.scss
html[data-page='index'] {
  .live_user_icon {
    width: 40px;
    height: 40px;
  }

  .live_thumbnail {
    position: relative;

    .status {
      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;
      width: 100%;
      padding-left: 10px;
      background: rgba(0, 0, 0, 0.6);
      font-size: 0.9rem;
      border-bottom-right-radius: 0.25rem;
      border-bottom-left-radius: 0.25rem;
    }
  }

  .users {
    list-style: none;
    padding-left: 0;

    img {
      width: 45px;
      height: 45px;
    }

    li {
      margin: 8px 0;
      width: 100%;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  .nodeco_link {
    color: #fff;
    text-decoration: none;
  }

  .knzk {
    max-width: 90%;
    width: 250px;
  }

  .about {
    width: 100%;
    padding: 15px;
    background: #333;
  }
}

